--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>数字人AI生成器</title>
+    <title>种草短视频AI数字人生成器</title>
     <style>
         /* 全局样式，设置文本居中 */
         body {
@@ -35,7 +35,7 @@
             width: 100%;
             max-width: 375px;
             height: 90vh;
-            max-height: 600px;
+            max-height: 598px;
             border: 1px solid #ccc;
             border-radius: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
